[gd_scene load_steps=3 format=3 uid="uid://cvxd6jpgibm68"]

[ext_resource type="Script" path="res://scripts/ui/relationship_info_node.gd" id="1_e8d3o"]
[ext_resource type="PackedScene" uid="uid://b2loam5g5ekg5" path="res://scenes/ui/country_button.tscn" id="2_nh6o8"]

[node name="RelationshipInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8d3o")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.66

[node name="Control" type="Control" parent="AspectRatioContainer"]
layout_mode = 2

[node name="Country1" parent="AspectRatioContainer/Control" instance=ExtResource("2_nh6o8")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 0.4
is_button_enabled = false

[node name="Country2" parent="AspectRatioContainer/Control" instance=ExtResource("2_nh6o8")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_bottom = 0.75
is_button_enabled = false

[node name="Label1To2" type="Label" parent="AspectRatioContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.6
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2
text = "Yes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2To1" type="Label" parent="AspectRatioContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "No"
horizontal_alignment = 1
vertical_alignment = 1
